add submodules of MEGA-DAgger

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "MEGA-DAgger"]
-	path = mega-dagger
-	url = https://github.com/M4D-SC1ENTIST/MEGA-DAgger
+	path = MEGA-DAgger
+	url = https://github.com/M4D-SC1ENTIST/MEGA-DAgger.git
